--- a/src/app/core/components/patient-checkin/patient-checkin.component.html
+++ b/src/app/core/components/patient-checkin/patient-checkin.component.html
@@ -6,10 +6,10 @@
   <h2 class="text-3xl font-bold mb-6">Patient CheckIn</h2>
 
   <!-- Patient Type -->
-  
+
   <div>
     <label class="block text-lg font-medium text-gray-700">Patient Type:</label>
-    <div class="flex space-x-4 mt-2">
+    <div class="flex space-x-4 mt-2 gap-4">
       <label class="flex items-center space-x-2 cursor-pointer">
         <input
           type="radio"
@@ -72,68 +72,77 @@
       <label>{{ field.label }}:</label>
       <input
         pInputText
-        *ngIf="field.type !== 'textarea' && field.type !== 'checkbox' && field.type !== 'dropdown'"
+        *ngIf="
+          field.type !== 'textarea' &&
+          field.type !== 'checkbox' &&
+          field.type !== 'dropdown'
+        "
         type="{{ field.type }}"
-          variant="filled"
-
+        variant="filled"
         formControlName="{{ field.name }}"
         class="w-full p-inputtext"
       />
       <textarea
-      pTextarea 
-      variant="filled"
+        pTextarea
+        variant="filled"
         *ngIf="field.type === 'textarea'"
         formControlName="{{ field.name }}"
         class="w-full px-3 py-2 border rounded-md focus:ring focus:ring-blue-200"
       ></textarea>
       <p-checkbox
-    
         *ngIf="field.type === 'checkbox'"
         type="checkbox"
         formControlName="{{ field.name }}"
         class="h-5 w-5 accent-blue-600 block"
       />
-            <p-select 
+      <p-select
         *ngIf="field.type === 'dropdown'"
-[options]="(field.options$ |async)??[]"
-            [formControlName]="field.name"
-            placeholder="Enter Package"
-            class="w-full"
-            variant="filled"
-            ></p-select>
-            <!-- (onChange)="onValueChange($event,'panelOrg')" -->
+        [options]="(field.options$ | async) ?? []"
+        [formControlName]="field.name"
+        placeholder="Enter Package"
+        class="w-full"
+        variant="filled"
+      ></p-select>
+      <!-- (onChange)="onValueChange($event,'panelOrg')" -->
     </div>
     <!-- Department & Sub-Department -->
     <div *ngIf="checkinForm.get('deptId')">
-      <label class="block text-sm font-medium text-gray-700"
-        >Department ID:</label
-      >
-      <input
-        type="number"
+      <label class="block text-sm font-medium text-gray-700">Department:</label>
+
+      <p-select
+        [options]="(deptDropDown$ | async) ?? []"
         formControlName="deptId"
-        class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-200"
-      />
+        placeholder="Enter Department"
+        class="w-full"
+        variant="filled"
+        (onChange)="onValueChange($event, 'department')"
+      ></p-select>
     </div>
 
     <div *ngIf="checkinForm.get('subDeptId')">
       <label class="block text-sm font-medium text-gray-700"
-        >Sub Department ID:</label
+        >Sub Department:</label
       >
-      <input
-        type="number"
+      <p-select
+        [options]="(subDeptDropDown$ | async) ?? []"
         formControlName="subDeptId"
-        class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-200"
-      />
+        placeholder="Enter SubDepartment"
+        class="w-full"
+        variant="filled"
+      ></p-select>
     </div>
 
     <!-- Doctor ID -->
     <div *ngIf="checkinForm.get('doctorId')">
-      <label class="block text-sm font-medium text-gray-700">Doctor ID:</label>
-      <input
-        type="text"
+      <label class="block text-sm font-medium text-gray-700">Doctor:</label>
+    
+        <p-select
+        [options]="(doctorsDropDown$ | async) ?? []"
         formControlName="doctorId"
-        class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-200"
-      />
+        placeholder="Select Doctor"
+        class="w-full"
+        variant="filled"
+      ></p-select>
     </div>
 
     <!-- Referral Fields -->
@@ -153,6 +162,8 @@
         >Outside Doctor Name:</label
       >
       <input
+      pInputText
+      variant="filled"
         type="text"
         formControlName="outSideDocName"
         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-200"
@@ -164,8 +175,8 @@
         >Referred Notes:</label
       >
       <textarea
-      pTextarea
-      variant="filled"
+        pTextarea
+        variant="filled"
         formControlName="referedNotes"
         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-200"
       ></textarea>
@@ -175,13 +186,12 @@
   <!-- Submit Button -->
   <div class="text-right mt-6">
     <p-button
-       label="Submit"
+      label="Submit"
       type="submit"
-       icon="pi pi-check"
+      icon="pi pi-check"
       [disabled]="checkinForm.invalid"
       class="w-full md:w-1/3"
     >
-      
     </p-button>
   </div>
 </form>
