--- a/src/app/core/components/patient-checkin/patient-checkin.component.html
+++ b/src/app/core/components/patient-checkin/patient-checkin.component.html
@@ -1,30 +1,50 @@
+<form *ngIf="!allowCheckin" [formGroup]="cnicForm">
+  <div class="flex flex-col cnicInput">
+    <label>Patient CNIC</label>
+    <p-inputMask
+      variant="filled"
+      formControlName="cnic"
+      mask="99999-9999999-9"
+      placeholder="Enter CNIC"
+      class="w-full"
+      [ngClass]="{
+        'ng-invalid ng-dirty':
+          cnicForm.controls['cnic'].invalid &&
+          (cnicForm.controls['cnic'].dirty || cnicForm.controls['cnic'].touched)
+      }"
+    ></p-inputMask>
+  </div>
+</form>
 <form
   [formGroup]="checkinForm"
   (ngSubmit)="onSubmit()"
   class="w-full mx-auto p-6 space-y-4"
+  *ngIf="allowCheckin"
 >
-  <h2 class="text-3xl font-bold mb-6">Patient CheckIn</h2>
+  <h2 class="text-3xl font-bold mb-6">Patient CheckIn<span *ngIf="patientName">({{patientName}})</span></h2>
 
   <!-- Patient Type -->
 
   <div>
     <label class="block text-lg font-medium text-gray-700">Patient Type:</label>
-    <div class="flex space-x-4 mt-2 gap-4">
-      <label class="flex items-center space-x-2 cursor-pointer">
+    <div class="flex mt-2 gap-4">
+      <label class="flex items-center gap-x-2 cursor-pointer">
         <input
           type="radio"
           formControlName="patientTypeId"
           [value]="1"
           class="accent-blue-600"
+          (change)="refferedFromOutside = false"
         />
         <span>Walkin</span>
       </label>
-      <label class="flex items-center space-x-2 cursor-pointer">
+      <label class="flex items-center gap-x-2 cursor-pointer">
         <input
           type="radio"
           formControlName="patientTypeId"
           [value]="2"
           class="accent-blue-600"
+          (change)="refferedFromOutside = true"
         />
         <span>Referral</span>
       </label>
@@ -32,19 +52,23 @@
   </div>
 
   <!-- Check-in Type -->
-  <div *ngIf="checkinForm.get('patientTypeId')?.value">
+  <div class="mt-4">
     <label class="block text-lg font-medium text-gray-700">Check in to:</label>
-    <div class="flex space-x-4 mt-2">
-      <label class="flex ittems-center space-x-2 cursor-pointer">
+    <div class="flex gap-4 mt-2">
+      <label
+        class="flex ittems-center gap-x-2 cursor-pointer"
+        *ngFor="let checkIntype of checkInTypes$ | async"
+      >
         <input
           type="radio"
           formControlName="checkInTypeID"
-          [value]="1"
+          [value]="checkIntype.id"
           class="accent-blue-600"
+          (change)="onValueChange($event, 'checkintype', checkIntype.name)"
         />
-        <span>Emergency</span>
+        <span>{{ checkIntype.name }}</span>
       </label>
-      <label class="flex items-center space-x-2 cursor-pointer">
+      <!-- <label class="flex items-center gap-x-2 cursor-pointer">
         <input
           type="radio"
           formControlName="checkInTypeID"
@@ -53,7 +77,7 @@
         />
         <span>Department</span>
       </label>
-      <label class="flex items-center space-x-2 cursor-pointer">
+      <label class="flex items-center gap-x-2 cursor-pointer">
         <input
           type="radio"
           formControlName="checkInTypeID"
@@ -61,50 +85,14 @@
           class="accent-blue-600"
         />
         <span>Doctor</span>
-      </label>
+      </label> -->
     </div>
   </div>
 
   <!-- Dynamic Fields Grid -->
-  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-    <!--  Common Fields (Always Visible) -->
-    <div *ngFor="let field of commonFields">
-      <label>{{ field.label }}:</label>
-      <input
-        pInputText
-        *ngIf="
-          field.type !== 'textarea' &&
-          field.type !== 'checkbox' &&
-          field.type !== 'dropdown'
-        "
-        type="{{ field.type }}"
-        variant="filled"
-        formControlName="{{ field.name }}"
-        class="w-full p-inputtext"
-      />
-      <textarea
-        pTextarea
-        variant="filled"
-        *ngIf="field.type === 'textarea'"
-        formControlName="{{ field.name }}"
-        class="w-full px-3 py-2 border rounded-md focus:ring focus:ring-blue-200"
-      ></textarea>
-      <p-checkbox
-        *ngIf="field.type === 'checkbox'"
-        type="checkbox"
-        formControlName="{{ field.name }}"
-        class="h-5 w-5 accent-blue-600 block"
-      />
-      <p-select
-        *ngIf="field.type === 'dropdown'"
-        [options]="(field.options$ | async) ?? []"
-        [formControlName]="field.name"
-        placeholder="Enter Package"
-        class="w-full"
-        variant="filled"
-      ></p-select>
-      <!-- (onChange)="onValueChange($event,'panelOrg')" -->
-    </div>
+  <div
+    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-4 gap-y-4 mt-4"
+  >
     <!-- Department & Sub-Department -->
     <div *ngIf="checkinForm.get('deptId')">
       <label class="block text-sm font-medium text-gray-700">Department:</label>
@@ -135,8 +123,8 @@
     <!-- Doctor ID -->
     <div *ngIf="checkinForm.get('doctorId')">
       <label class="block text-sm font-medium text-gray-700">Doctor:</label>
-    
-        <p-select
+
+      <p-select
         [options]="(doctorsDropDown$ | async) ?? []"
         formControlName="doctorId"
         placeholder="Select Doctor"
@@ -146,24 +134,24 @@
     </div>
 
     <!-- Referral Fields -->
-    <div *ngIf="checkinForm.get('isRefered')">
+    <div *ngIf="refferedFromOutside">
       <label class="block text-sm font-medium text-gray-700"
-        >Is Referred:</label
+        >Referred From Outside:</label
       >
       <input
         type="checkbox"
-        formControlName="isRefered"
+        formControlName="isReferedFromOutSide"
         class="h-5 w-5 accent-blue-600"
       />
     </div>
 
-    <div *ngIf="checkinForm.get('outSideDocName')">
+    <div *ngIf="checkinForm.get('isReferedFromOutSide')?.value">
       <label class="block text-sm font-medium text-gray-700"
         >Outside Doctor Name:</label
       >
       <input
-      pInputText
-      variant="filled"
+        pInputText
+        variant="filled"
         type="text"
         formControlName="outSideDocName"
         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-200"
@@ -181,17 +169,76 @@
         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-200"
       ></textarea>
     </div>
+    <!--  Common Fields (Always Visible) -->
+    <div *ngFor="let field of commonFields">
+      <label>{{ field.label }}:</label>
+      <input
+        pInputText
+        *ngIf="
+          field.type !== 'textarea' &&
+          field.type !== 'checkbox' &&
+          field.type !== 'dropdown'
+        "
+        type="{{ field.type }}"
+        variant="filled"
+        formControlName="{{ field.name }}"
+        class="w-full p-inputtext"
+      />
+      <textarea
+        pTextarea
+        variant="filled"
+        *ngIf="field.type === 'textarea'"
+        formControlName="{{ field.name }}"
+        class="w-full px-3 py-2 border rounded-md focus:ring focus:ring-blue-200"
+      ></textarea>
+      <p-checkbox
+        *ngIf="field.type === 'checkbox'"
+        type="checkbox"
+        formControlName="{{ field.name }}"
+        binary="true"
+        class="h-5 w-5 accent-blue-600 block"
+      />
+      <p-select
+        *ngIf="field.type === 'dropdown'"
+        [options]="(field.options$ | async) ?? []"
+        [formControlName]="field.name"
+        placeholder="Enter Package"
+        class="w-full"
+        variant="filled"
+      ></p-select>
+      <!-- (onChange)="onValueChange($event,'panelOrg')" -->
+    </div>
   </div>
 
   <!-- Submit Button -->
-  <div class="text-right mt-6">
+  <div class="text-right mt-6" *ngIf="!isLoading();else spinner">
     <p-button
       label="Submit"
       type="submit"
       icon="pi pi-check"
       [disabled]="checkinForm.invalid"
       class="w-full md:w-1/3"
+      
     >
     </p-button>
   </div>
+  <ng-template #spinner>
+  <div class="text-right mt-6">
+    <button
+      class="cursor-pointer mt-4 bg-[#2929b9] hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-md transition duration-200"
+    >
+      <p-progress-spinner
+        ariaLabel="loading"
+        [style]="{ width: '25px', height: '25px' }"
+      />
+    </button>
+  </div>
+</ng-template>
 </form>
+<p-confirmDialog
+  position="center"
+  styleClass="custom-confirm-dialog"
+  [closable]="false"
+  [baseZIndex]="10000"
+>
+</p-confirmDialog>
