--- a/src/app/core/components/patient-registration/patient-registration.component.scss
+++ b/src/app/core/components/patient-registration/patient-registration.component.scss
@@ -1,3 +1,14 @@
 .ng-invalid.ng-dirty {
     border: 1px solid red !important;
 }
+.label-required {
+    position: relative;
+    display: inline-block;
+}
+
+.asterisk {
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: red;
+}
