--- a/src/app/core/components/patient-checkin/patient-checkin.component.html
+++ b/src/app/core/components/patient-checkin/patient-checkin.component.html
@@ -68,24 +68,6 @@
         />
         <span>{{ checkIntype.name }}</span>
       </label>
-      <!-- <label class="flex items-center gap-x-2 cursor-pointer">
-        <input
-          type="radio"
-          formControlName="checkInTypeID"
-          [value]="2"
-          class="accent-blue-600"
-        />
-        <span>Department</span>
-      </label>
-      <label class="flex items-center gap-x-2 cursor-pointer">
-        <input
-          type="radio"
-          formControlName="checkInTypeID"
-          [value]="3"
-          class="accent-blue-600"
-        />
-        <span>Doctor</span>
-      </label> -->
     </div>
   </div>
 
@@ -95,7 +77,7 @@
   >
     <!-- Department & Sub-Department -->
     <div *ngIf="checkinForm.get('deptId')">
-      <label class="block text-sm font-medium text-gray-700">Department:</label>
+      <label class="block text-sm font-medium text-gray-700" class="label-required">Department:</label>
 
       <p-select
         [options]="(deptDropDown$ | async) ?? []"
@@ -154,6 +136,7 @@
         variant="filled"
         type="text"
         formControlName="outSideDocName"
+        placeholder="Enter Outside Doctor Name"
         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-200"
       />
     </div>
@@ -166,6 +149,7 @@
         pTextarea
         variant="filled"
         formControlName="referedNotes"
+        placeholder="Enter Referred Notes"
         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring focus:ring-blue-200"
       ></textarea>
     </div>
@@ -182,6 +166,7 @@
         type="{{ field.type }}"
         variant="filled"
         formControlName="{{ field.name }}"
+        placeholder="Enter {{ field.label }}"
         class="w-full p-inputtext"
       />
       <textarea
@@ -189,6 +174,7 @@
         variant="filled"
         *ngIf="field.type === 'textarea'"
         formControlName="{{ field.name }}"
+        placeholder="Enter {{ field.label }}"
         class="w-full px-3 py-2 border rounded-md focus:ring focus:ring-blue-200"
       ></textarea>
       <p-checkbox
@@ -202,11 +188,10 @@
         *ngIf="field.type === 'dropdown'"
         [options]="(field.options$ | async) ?? []"
         [formControlName]="field.name"
-        placeholder="Enter Package"
+        placeholder="Enter {{ field.label }}"
         class="w-full"
         variant="filled"
       ></p-select>
-      <!-- (onChange)="onValueChange($event,'panelOrg')" -->
     </div>
   </div>
 
