--- a/src/app/core/components/doctor-management/doctor-prescription/doctor-prescription.component.scss
+++ b/src/app/core/components/doctor-management/doctor-prescription/doctor-prescription.component.scss
@@ -1,3 +1,42 @@
 h3 {
   font-size: 1.5rem;
 }
+::ng-deep p-table,
+.p-table {
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+  border: 1px solid #e5e7eb; // light gray border
+  display: block;
+  .p-datatable-header {
+    background-color: #f9fafb;
+    font-weight: 600;
+    color: #374151;
+    padding: 0.75rem 1rem;
+  }
+
+  table {
+    border-collapse: separate;
+    border-spacing: 0;
+
+    th {
+      background-color: #f3f4f6;
+      color: #4b5563;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      padding: 0.75rem 1rem;
+      border-bottom: 1px solid #e5e7eb;
+    }
+
+    td {
+      background-color: #ffffff;
+      padding: 0.75rem 1rem;
+      border-bottom: 1px solid #f3f4f6;
+      color: #374151;
+    }
+
+    tr:nth-child(even) td {
+      background-color: #f9fafb;
+    }
+  }
+}
